fixed more line spacing in paragraphs

--- a/css/index.css
+++ b/css/index.css
@@ -142,7 +142,7 @@ button:hover{
 }
 
 .artist p{
-    line-height: 1.3rem;
+    line-height: 1.5rem;
 }
 
 /* Media Queries for Responsiveness */
